--- a/shamrock-web/webapp/templates/main.xhtml
+++ b/shamrock-web/webapp/templates/main.xhtml
@@ -1,54 +1,53 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<tr:document xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
-  xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
-  xmlns:tr="http://myfaces.apache.org/trinidad" 
-  xmlns:trh="http://myfaces.apache.org/trinidad/html" 
-  xmlns:a4j="http://richfaces.org/a4j"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
+  xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:a4j="http://richfaces.org/a4j"
   xmlns:rich="http://richfaces.org/rich">
 
-  <trh:head>
-  <meta http-equiv="Content-Type" content="text/xhtml; charset=UTF-8" />
+<head>
+<meta http-equiv="Content-Type" content="text/xhtml; charset=UTF-8" />
 
-  <title><ui:insert name="title" /></title>
+<title><ui:insert name="title" /></title>
 
-  <link rel="stylesheet" type="text/css"
-    href="${facesContext.externalContext.requestContextPath}/styles/${appConfig['csstheme']}/common.css" />
+<link rel="stylesheet" type="text/css"
+  href="${facesContext.externalContext.requestContextPath}/styles/${appConfig['csstheme']}/common.css" />
 
-  <link rel="icon" href="${facesContext.externalContext.requestContextPath}/images/shamrock-icon.gif" />
+<link rel="icon" href="${facesContext.externalContext.requestContextPath}/images/shamrock-icon.gif" />
 
-  <ui:include src="/templates/include/dynamic-css.xhtml" />
+</head>
 
-  </trh:head>
+<body>
+
+<ui:include src="/templates/include/dynamic-css.xhtml" />
 
 
-    <ui:include src="/templates/include/header.xhtml" />
+<ui:include src="/templates/include/header.xhtml" />
 
 
-    <table class="left_menu" cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td>
-          <div class="menu_separator">&nbsp;</div>
-          <ui:include src="/templates/include/navigation.xhtml" /></td>
-        </tr>
-      </tbody>
-    </table>
+<table class="left_menu" cellpadding="0" cellspacing="0" border="0">
+  <tbody>
+    <tr>
+      <td>
+      <div class="menu_separator">&nbsp;</div>
+      <ui:include src="/templates/include/navigation.xhtml" /></td>
+    </tr>
+  </tbody>
+</table>
 
-    <h:graphicImage value="#{navigator.currentComponent.captionImage}"
-      rendered="#{componentNavigator.hasCurrentComponent}" height="40" alt="" border="0" styleClass="component_name" />
+<h:graphicImage value="#{navigator.currentComponent.captionImage}" rendered="#{componentNavigator.hasCurrentComponent}"
+  height="40" alt="" border="0" styleClass="component_name" />
 
-    <table cellpadding="0" cellspacing="0" border="0" class="content_container" width="100%">
-      <tbody>
-        <tr>
-          <td>
-          <div class="content_container_left_brick"></div>
-          </td>
-          <td width="100%" class="content_container_pdddings"><ui:insert name="content">Content</ui:insert> <rich:spacer
-            style="height:10px;" /> <rich:separator style="height:1px" />
-          <div style="float: right;" class="footer-text">#{environment.version}</div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-
-</tr:document>
+<table cellpadding="0" cellspacing="0" border="0" class="content_container" width="100%">
+  <tbody>
+    <tr>
+      <td>
+      <div class="content_container_left_brick"></div>
+      </td>
+      <td width="100%" class="content_container_pdddings"><ui:insert name="content">Content</ui:insert> <rich:spacer
+        style="height:10px;" /> <rich:separator style="height:1px" />
+      <div style="float: right;" class="footer-text">#{environment.version}</div>
+      </td>
+    </tr>
+  </tbody>
+</table>
+</body>
+</html>
